umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0026_Cc1c(c(on1)C)NC(=O)N_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles_strict
category: opensmiles_strict
opensmiles_strict:
  success: true
  summary:
    sum_formula: C30F3N6O6
    atom_count: 45
    bond_count: 48
