umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0027_c1ccc2c(c1)C(=O)O_C(_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
opensmiles_strict:
  success: false
  error:
    error_type: ConsecutiveBonds
    message: Consecutive bonds at position 23
