umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0029_c1cc(cnc1)C2=C(NON2)_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: ConsecutiveBonds
    message: Consecutive bonds at position 25
opensmiles:
  success: false
  error:
    error_type: ConsecutiveBonds
    message: Consecutive bonds at position 25
